--- a/.github/workflows/get-eigen.yml
+++ b/.github/workflows/get-eigen.yml
@@ -7,6 +7,7 @@ jobs:
   test:
 
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-16.04, ubuntu-18.04, macos-latest, windows-latest]
 
