[install-dependencies] Support a global github option
Allow to build the same packages on all platforms

--- a/install-dependencies/action.yml
+++ b/install-dependencies/action.yml
@@ -18,6 +18,10 @@ inputs:
     description: 'Compiler for CMake dependencies (Linux only)'
     required: true
     default: 'gcc'
+  github:
+    description: 'GitHub packages (CMake) to fetch and install'
+    required: true
+    default: ''
 runs:
   using: 'node12'
   main: 'index.js'
