--- a/upload-package/package.json
+++ b/upload-package/package.json
@@ -13,6 +13,7 @@
     "@actions/core": "^1.2.0",
     "@actions/exec": "^1.0.1",
     "@actions/io": "^1.0.1",
+    "JSON": "^1.0.0",
     "axios": "^0.19.0",
     "fs": "0.0.1-security",
     "js-yaml": "^3.13.1"
