[pbuilder-images] Correctly pass build-arg(s) to docker

--- a/.github/workflows/pbuilder-images.yml
+++ b/.github/workflows/pbuilder-images.yml
@@ -12,6 +12,7 @@ jobs:
       matrix:
         dist: [xenial, bionic]
         arch: [i386, amd64]
+        ros-distro:
         include:
           - dist: xenial
             arch: i386
@@ -36,5 +37,5 @@ jobs:
         fi
         cd docker
         docker login -u ${{ secrets.DOCKER_HUB_USER }} -p ${{ secrets.DOCKER_HUB_PWD }}
-        docker build --build-arg DIST=${{ matrix.dist }} ARCH=${{ matrix.arch }} ROS_DISTRO=${ROS_DISTRO} -t pbuilder:${TAG} .
+        docker build --build-arg DIST=${{ matrix.dist }} --build-arg ARCH=${{ matrix.arch }} --build-arg ROS_DISTRO=${ROS_DISTRO} -t pbuilder:${TAG} .
         docker image push gergondet/pbuilder:${TAG}
