--- a/.github/workflows/pbuilder-images.yml
+++ b/.github/workflows/pbuilder-images.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         dist: [xenial, bionic]
         arch: [i386, amd64]
-        ros-distro:
+        ros-distro: ~
         include:
           - dist: xenial
             arch: i386
