--- a/.github/workflows/pbuilder-images.yml
+++ b/.github/workflows/pbuilder-images.yml
@@ -12,17 +12,6 @@ jobs:
       matrix:
         dist: [xenial, bionic]
         arch: [i386, amd64]
-        ros-distro: 'none'
-        include:
-          - dist: xenial
-            arch: i386
-            ros-distro: kinetic
-          - dist: xenial
-            arch: amd64
-            ros-distro: kinetic
-          - dist: bionic
-            arch: amd64
-            ros-distro: melodic
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v1
@@ -30,16 +19,22 @@ jobs:
       run: |
         set -x
         export TAG="${{ matrix.dist }}-${{ matrix.arch }}"
-        export ROS_DISTRO="${{ matrix.ros-distro }}"
-        if [ ${ROS_DISTRO} = "none" ]
-        then
-          export ROS_DISTRO=""
-        fi
-        if [ ! -z ${ROS_DISTRO} ]
-        then
-          export TAG="${TAG}-${ROS_DISTRO}"
-        fi
+        export ROS_DISTRO=""
         cd docker
         docker login -u ${{ secrets.DOCKER_HUB_USER }} -p ${{ secrets.DOCKER_HUB_PWD }}
         docker build --build-arg DIST=${{ matrix.dist }} --build-arg ARCH=${{ matrix.arch }} --build-arg ROS_DISTRO=${ROS_DISTRO} -t pbuilder:${TAG} .
         docker image push gergondet/pbuilder:${TAG}
+        if [ "${{ matrix.dist }}" = "xenial" ]
+        then
+          export ROS_DISTRO="kinetic"
+          export TAG="${TAG}-${ROS_DISTRO}"
+          docker build --build-arg DIST=${{ matrix.dist }} --build-arg ARCH=${{ matrix.arch }} --build-arg ROS_DISTRO=${ROS_DISTRO} -t pbuilder:${TAG} .
+          docker image push gergondet/pbuilder:${TAG}
+        fi
+        if [ "${{ matrix.dist }}" = "bionic" -a "${{ matrix.arch }}" = "amd64" ]
+        then
+          export ROS_DISTRO="melodic"
+          export TAG="${TAG}-${ROS_DISTRO}"
+          docker build --build-arg DIST=${{ matrix.dist }} --build-arg ARCH=${{ matrix.arch }} --build-arg ROS_DISTRO=${ROS_DISTRO} -t pbuilder:${TAG} .
+          docker image push gergondet/pbuilder:${TAG}
+        fi
