--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,4 +5,4 @@ FROM ubuntu:18.04
 
 COPY pbuilderrc /root/.pbuilderrc
 COPY setup-pbuilder.sh /root/setup-pbuilder.sh
-RUN ./setup-pbuilder.sh ${DIST} ${ARCH}
+RUN cd /root && ./setup-pbuilder.sh ${DIST} ${ARCH}
