--- a/.github/workflows/pbuilder-images.yml
+++ b/.github/workflows/pbuilder-images.yml
@@ -21,10 +21,13 @@ jobs:
     - uses: actions/checkout@v1
     - name: Setup docker buildx
       run: |
-        wget -O docker-buildx https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64
+        set -x
+        wget --quiet -O docker-buildx https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64
         chmod a+x docker-buildx
         mkdir -p ~/.docker/cli-plugins/docker-buildx
         mv docker-buildx ~/.docker/cli-plugins/docker-buildx
+        docker buildx --help
+        docker buildx create --help
         docker buildx create --buildkitd-flags '--allow-insecure-entitlement security.insecure' --use
     - name: Build image
       run: |
