[build-conan-package] Allow to specify a version manually

--- a/build-conan-package/action.yml
+++ b/build-conan-package/action.yml
@@ -30,6 +30,10 @@ inputs:
     description: 'Change working directory'
     required: true
     default: ''
+  version:
+    description: 'Force a version (otherwise extract it from conanfile.py'
+    required: true
+    default: ''
   BINTRAY_API_KEY:
     description: 'Bintray API key'
     required: true
