--- a/build-conan-package/package.json
+++ b/build-conan-package/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@actions/core": "^1.2.4",
     "@actions/exec": "^1.0.4",
-    "@actions/github": "^2.2.0",
-    "command-exists": "^1.2.9"
+    "@actions/github": "^2.2.0"
   }
 }
