[pbuilder-images] Build an image for focal + ROS noetic

--- a/.github/workflows/pbuilder-images.yml
+++ b/.github/workflows/pbuilder-images.yml
@@ -64,3 +64,7 @@ jobs:
         then
           build-image "melodic"
         fi
+        if [ "${{ matrix.dist }}" = "focal" -a "${{ matrix.arch }}" = "amd64" ]
+        then
+          build-image "noetic"
+        fi
