--- a/.github/workflows/build-cmake-project.yml
+++ b/.github/workflows/build-cmake-project.yml
@@ -7,9 +7,10 @@ on:
       - 'tests/boost-project/**'
 
 jobs:
-  runs-on: windows-latest
-  steps:
-  - uses: actions/checkout@v1
-  - name: Test build-cmake-project
-    with:
-      project-dir: tests/boost-project
+  build:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Test build-cmake-project
+      with:
+        project-dir: tests/boost-project
