Run build-cmake-project test for changes in utils

--- a/.github/workflows/build-cmake-project.yml
+++ b/.github/workflows/build-cmake-project.yml
@@ -5,6 +5,7 @@ on:
       - '.github/workflows/build-cmake-project.yml'
       - 'build-cmake-project/**'
       - 'tests/boost-project/**'
+      - 'utils/**'
 
 jobs:
   build:
