--- a/.github/workflows/install-dependencies-ros.yml
+++ b/.github/workflows/install-dependencies-ros.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Test install ROS dependencies
       uses: jrl-umi3218/github-actions/install-dependencies@master
       with:
-        ros:
+        ros: |
           apt: ros-base
           workspace:
             - path: jrl-umi3218/mc_rtc_msgs
