[ci] Use rospack find rather than roscd
roscd is an alias whereas rospack is a proper command

--- a/.github/workflows/install-dependencies-ros.yml
+++ b/.github/workflows/install-dependencies-ros.yml
@@ -22,5 +22,4 @@ jobs:
       run: |
         set -x
         set -e
-        roscd jvrc_description
-        pwd
+        rospack find jvrc_description
