[setup-self-hosted-runner] Avoid overwriting the insteadOf configuration

--- a/setup-self-hosted-runner/action.yml
+++ b/setup-self-hosted-runner/action.yml
@@ -25,6 +25,6 @@ runs:
         if [[ -n "${{ inputs.GITE_PAT }}" ]]
         then
           git config --global url."https://${{ inputs.GITE_PAT }}@gite.lirmm.fr/".insteadOf https://gite.lirmm.fr/
-          git config --global url."https://${{ inputs.GITE_PAT }}@gite.lirmm.fr/".insteadOf git@gite.lirmm.fr:
+          git config --global --add url."https://${{ inputs.GITE_PAT }}@gite.lirmm.fr/".insteadOf git@gite.lirmm.fr:
         fi
       shell: bash
