--- a/setup-self-hosted-runner/action.yml
+++ b/setup-self-hosted-runner/action.yml
@@ -20,7 +20,7 @@ runs:
         if [[ -n "${{ inputs.GITHUB_PAT }}" ]]
         then
           git config --global url."https://${{ inputs.GITHUB_PAT }}@github.com/".insteadOf https://github.com/
-          git config --global url."https://${{ inputs.GITHUB_PAT }}@github.com/".insteadOf git@github.com:
+          git config --global --add url."https://${{ inputs.GITHUB_PAT }}@github.com/".insteadOf git@github.com:
         fi
         if [[ -n "${{ inputs.GITE_PAT }}" ]]
         then
